force-app/main/default/objects/Transaction__c/fields/Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Enterprise__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Links to the company being invested in</description>
    <label>Enterprise</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>