force-app/main/default/objects/Transaction__c/fields/PricePerUnit__c.field-meta.xml
<CustomField>
    <fullName>PricePerUnit__c</fullName>
    <description>Price per share/unit at the time of transaction</description>
    <label>Price Per Unit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>