force-app/main/default/objects/Transaction__c/fields/TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionDate__c</fullName>
    <description>Date of the transaction</description>
    <label>Transaction Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>