force-app/main/default/objects/Transaction__c/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <description>Type of the transaction</description>
    <label>Transaction Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy</fullName>
                <default>true</default>
                <label>Buy</label>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
            <value>
                <fullName>Dividend Reinvestment</fullName>
            </value>
            <value>
                <fullName>Split Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>